# multiagent-passenger-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
aircraft-maintenance-sim/src/maintenance_sim/: agents.py  config.py  demo.py  fleet.py  knowledge_graph.py  llm.py  memory.py  validation.py
aircraft-maintenance-sim/tests/: conftest.py  test_knowledge_graph.py
data/seeds/: ad_edges.csv  synthetic_fleet.csv
scripts/: download_data.py  prepare_data.py
src/maintenance_sim/: simulation.py
tests/: test_agents.py  test_memory.py  test_simulation.py  test_validation.py
